--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body > div {
     height: 100px;
 }
 #main {
+    position: relative;
     height: calc(100% - 100px - 50px);
 }
 #footer {
@@ -48,12 +49,18 @@ body > div {
     font-size: 40px;
 }
 .bigIcon:hover {
-    font-size: 45px;
     background-color: rgba(255,255,255,0.3);
     cursor: pointer;
 }
 .bold-text {
     font-weight: bold;
+}
+.backPlate {
+    position: relative;
+    height: 70%;
+    width: 90%;
+    margin: auto;
+    background-color: aqua;
 }
 /* 2+ lvl */
 #menu-top {
@@ -64,6 +71,7 @@ body > div {
     text-align: center;
 }
 #listView {
+    z-index: 2;
     position: absolute;
     top: 5%;
     left: 5%;
@@ -109,3 +117,50 @@ body > div {
     margin: auto;
     text-align: center;
 }
+#hand {
+    position: relative;
+    height: 20%;
+    width: 90%;
+    margin: auto;
+    background-color: yellow;
+}
+/* layer */
+.layerPart {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: calc(50% - 60px);
+    width: 120px;
+    height: 120px;
+    line-height: 120px;
+    text-align: center;
+}
+.layerNormal {
+    font-size: 40px;
+}
+.layerBig {
+    font-size: 80px;
+}
+
+/* slider */
+.slider-container {
+    float: left;
+    width: 30%;
+    height: 60px;
+    position: relative;
+}
+.slider {
+    width: 100%;
+    height: 50%;
+}
+#sliderVal {
+    width: 100%;
+    height: 100px;
+    margin-top: 30px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+/* tbd */
