--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@ html {
     height: 100%;
     width: 100%;
     background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgb(20,61,171) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, rgb(51,198,69) 100%);
 }
 body {
     height: 100%;
     width: 100%;
     margin: 0;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgb(20,61,171) 0%, rgba(0,0,0,0) 10%, rgba(0,0,0,0) 90%, rgb(51,198,69) 100%);
 }
 body > div {
     width: 90%;
@@ -60,7 +61,6 @@ body > div {
     height: 70%;
     width: 90%;
     margin: auto;
-    background-color: aqua;
 }
 /* 2+ lvl */
 #menu-top {
@@ -122,7 +122,6 @@ body > div {
     height: 20%;
     width: 90%;
     margin: auto;
-    background-color: yellow;
 }
 /* layer */
 .layerPart {
@@ -155,12 +154,13 @@ body > div {
 }
 #sliderVal {
     width: 100%;
-    height: 100px;
+    height: 50px;
     margin-top: 30px;
     text-align: center;
     position: absolute;
     left: 0;
     top: 0;
+    background-color: rgb(215,240,181);
 }
 
 /* tbd */
